--- a/content/themes/webcomicx-serial/styles/main.css
+++ b/content/themes/webcomicx-serial/styles/main.css
@@ -393,6 +393,7 @@ li.menu{
 .comic-pagination span {
     vertical-align: middle;
     display: inline-block;
+    font-size: 18px
 }
 .comic-pagination a{
 	text-decoration:none;
@@ -415,24 +416,17 @@ li.menu{
 }
 .previous a{
 	float:left;
-    display: block;
+    font-size: 54px;
+    line-height: 18px;
 }
 .next a{
 	float:left;
     display: block;
+    font-size: 54px;
+    line-height: 18px;
 }
 .comic-pagination b{
-	font-size:3em;
-	font-weight:900;
-	line-height:0.33em;	
 	margin:0 8px;
-}
-.comic-pagination b{
-float:left
-	
-}
-.next b,.next span{
-	float:left
 }
 
 /*Quick Archive Naviigation*/
@@ -518,10 +512,12 @@ float:left
 	position:absolute;
 	left:0;
 	right:0;
-	float:left;
 	z-index:0;
-	margin-top:-10px;
+	margin-top:-9px;
     padding:10px 3px;	
+}
+.comic-pagination-archive a{
+    vertical-align: middle;
 }
 .comic-collection {
     overflow-y:hidden;
@@ -881,8 +877,6 @@ transition: all 1.5s ease-in!important;
     float: none;
     }
 .comic-pagination b{
-	font-size:3em;
-	font-weight:900;
 	line-height:0;	
 	margin:8px 15px;
 }
